[gd_scene load_steps=25 format=3 uid="uid://bdrd7rx11vacv"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_gnuhl"]
[ext_resource type="Environment" uid="uid://tdvlqoyf7qjy" path="res://scenes/env_main.tres" id="2_7og4h"]
[ext_resource type="Script" path="res://scenes/DebugInfo.gd" id="2_pbxns"]
[ext_resource type="Texture2D" uid="uid://chwwq3rkwc7ly" path="res://assets/ui/crosshair.png" id="3_8nfak"]
[ext_resource type="Shader" path="res://assets/shaders/screen_effects/screen_underwater.gdshader" id="3_mlfmr"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="5_l2efs"]
[ext_resource type="PackedScene" uid="uid://bpwl58ebdmdxn" path="res://assets/models/legs_test.glb" id="7_gp4dq"]
[ext_resource type="Script" path="res://scripts/player/WeaponManager.gd" id="7_kjtma"]
[ext_resource type="PackedScene" uid="uid://bwa01k1gb5nx2" path="res://scenes/user_interface/WeaponSelect.tscn" id="8_2ko3q"]
[ext_resource type="PackedScene" uid="uid://b01a18qy38ssi" path="res://scenes/user_interface/Menu.tscn" id="17_nyi1l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="19_5ucv5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="20_cmvkg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="21_4as0m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="23_w37rm"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_74fkp"]
friction = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_q06ui"]
top_radius = 0.4
bottom_radius = 0.4
height = 1.8
radial_segments = 16
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w5mwi"]
height = 1.8
radius = 0.4

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_e20wb"]
auto_exposure_scale = 0.2
auto_exposure_speed = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skehm"]
shader = ExtResource("3_mlfmr")
shader_parameter/tint = Color(0, 0.494118, 0.603922, 0.12549)
shader_parameter/wave_speed = 3.11
shader_parameter/wave_freq = 3.22
shader_parameter/wave_width = 5.155
shader_parameter/blur = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jx86m"]
height = 0.05
radius = 0.39

[sub_resource type="Animation" id="Animation_iypg4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, -0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColliderVisualizer:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColliderVisualizer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_llvy1"]
resource_name = "player_crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.75, -0.2), Vector3(0, -0.0495735, -0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColliderVisualizer:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColliderVisualizer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.4, 0)]
}

[sub_resource type="Animation" id="Animation_lb33v"]
resource_name = "player_uncrouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.4, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.0495735, -0.2), Vector3(0, 0.75, -0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColliderVisualizer:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColliderVisualizer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.4, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dcjiq"]
_data = {
"RESET": SubResource("Animation_iypg4"),
"player_crouch": SubResource("Animation_llvy1"),
"player_uncrouch": SubResource("Animation_lb33v")
}

[node name="Player" type="RigidBody3D"]
collision_layer = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 15.0
physics_material_override = SubResource("PhysicsMaterial_74fkp")
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
custom_integrator = true
continuous_cd = true
contact_monitor = true
max_contacts_reported = 16
script = ExtResource("1_gnuhl")

[node name="ColliderVisualizer" type="CSGMesh3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_q06ui")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_w5mwi")

[node name="Root" type="Node3D" parent="."]

[node name="Head" type="Node3D" parent="Root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -0.2)

[node name="Camera" type="Camera3D" parent="Root/Head"]
environment = ExtResource("2_7og4h")
attributes = SubResource("CameraAttributesPractical_e20wb")
current = true
fov = 90.0

[node name="ScreenEffects" type="Control" parent="Root/Head/Camera"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Underwater" type="ColorRect" parent="Root/Head/Camera/ScreenEffects"]
material = SubResource("ShaderMaterial_skehm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="Root/Head/Camera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DebugInfo" type="Label" parent="Root/Head/Camera/UI"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 310.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
script = ExtResource("2_pbxns")

[node name="StateChartDebugger" parent="Root/Head/Camera/UI/DebugInfo" instance=ExtResource("5_l2efs")]
z_index = 5
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = 322.0
offset_top = 8.0
offset_right = 619.0
offset_bottom = 379.0
grow_horizontal = 0
grow_vertical = 1
initial_node_to_watch = NodePath("../../../../../../StateChart")

[node name="Crosshair" type="TextureRect" parent="Root/Head/Camera/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_8nfak")

[node name="hold_point" type="JoltGeneric6DOFJoint3D" parent="Root/Head"]
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false
node_a = NodePath("../hold_orientation")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="hold_orientation" type="StaticBody3D" parent="Root/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="interactcast" type="RayCast3D" parent="Root/Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2.5, 0)
collision_mask = 5
hit_back_faces = false

[node name="WeaponManager" type="Node3D" parent="Root/Head" node_paths=PackedStringArray("PLAYER")]
script = ExtResource("7_kjtma")
PLAYER = NodePath("../../..")

[node name="NewWeaponSelect" parent="Root/Head" instance=ExtResource("8_2ko3q")]

[node name="legs_test" parent="Root" instance=ExtResource("7_gp4dq")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 0.75, 0, -1.50996e-07, 0, -1, 0, -0.844603, 0.2)
visible = false

[node name="Skeleton3D" parent="Root/legs_test/Armature" index="0"]
bones/0/rotation = Quaternion(-7.10543e-15, -5.69993e-15, 1, 7.54979e-08)
bones/1/rotation = Quaternion(-0.0267518, -0.706601, -0.0107043, 0.707026)
bones/2/rotation = Quaternion(0.0334134, -0.00175326, 0.0244522, 0.999141)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(-0.0267519, 0.7066, 0.0107044, 0.707026)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.0334135, 0.00175332, -0.0244522, 0.999141)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.513068, 0.486581, 0.486581, 0.513068)
bones/6/rotation = Quaternion(0.507981, -0.492017, 0.500833, -0.49904)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.0193021, -0.0110751, 0.955716, -0.293447)
bones/7/scale = Vector3(0.999999, 1, 1)
bones/8/rotation = Quaternion(0.0221988, 0.0286914, -0.163898, 0.98581)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.513068, -0.486581, -0.486581, 0.513068)
bones/10/rotation = Quaternion(0.507981, 0.492017, -0.500833, -0.49904)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.0193021, -0.0110751, 0.955716, 0.293447)
bones/11/scale = Vector3(0.999999, 1, 1)
bones/12/rotation = Quaternion(0.0221988, -0.0286914, 0.163898, 0.98581)
bones/12/scale = Vector3(1, 1, 1)

[node name="headcast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_jx86m")
target_position = Vector3(0, 0.875, 0)
max_results = 1

[node name="groundcast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_jx86m")
target_position = Vector3(0, -0.9, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dcjiq")
}

[node name="Control" parent="." instance=ExtResource("17_nyi1l")]
visible = false

[node name="StateChart" type="Node" parent="."]
script = ExtResource("19_5ucv5")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("20_cmvkg")
initial_state = NodePath("Standing")

[node name="Standing" type="Node" parent="StateChart/Root"]
script = ExtResource("20_cmvkg")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateChart/Root/Standing"]
script = ExtResource("20_cmvkg")
initial_state = NodePath("Idle")

[node name="BecomeAirborne" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("23_w37rm")
to = NodePath("../../Airborne")
event = &"airborne"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("23_w37rm")
to = NodePath("../../Airborne/Jumping")
event = &"jump"
delay_in_seconds = "0.0"

[node name="GotoIdle" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("23_w37rm")
to = NodePath("../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("21_4as0m")

[node name="Walk" type="Node" parent="StateChart/Root/Standing/Grounded/Idle"]
script = ExtResource("23_w37rm")
to = NodePath("../../Walking")
event = &"walk"
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("21_4as0m")

[node name="Sprint" type="Node" parent="StateChart/Root/Standing/Grounded/Walking"]
script = ExtResource("23_w37rm")
to = NodePath("../../Sprinting")
event = &"sprint"
delay_in_seconds = "0.0"

[node name="Sprinting" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("21_4as0m")

[node name="SlopeSliding" type="Node" parent="StateChart/Root/Standing/Grounded"]
script = ExtResource("21_4as0m")

[node name="Airborne" type="Node" parent="StateChart/Root/Standing"]
script = ExtResource("20_cmvkg")
initial_state = NodePath("Falling")

[node name="BecomeGrounded" type="Node" parent="StateChart/Root/Standing/Airborne"]
script = ExtResource("23_w37rm")
to = NodePath("../../Grounded")
event = &"grounded"
delay_in_seconds = "0.0"

[node name="Falling" type="Node" parent="StateChart/Root/Standing/Airborne"]
script = ExtResource("21_4as0m")

[node name="Jumping" type="Node" parent="StateChart/Root/Standing/Airborne"]
script = ExtResource("21_4as0m")

[node name="Transition" type="Node" parent="StateChart/Root/Standing/Airborne"]
script = ExtResource("23_w37rm")
to = NodePath("../Falling")
event = &"falling"
delay_in_seconds = "0.1"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="state_input" from="StateChart/Root/Standing/Grounded" to="." method="_on_grounded_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Standing/Grounded" to="." method="_on_grounded_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Grounded" to="." method="_on_grounded_state_processing"]
[connection signal="taken" from="StateChart/Root/Standing/Grounded/Jump" to="." method="_on_jump_taken"]
[connection signal="state_entered" from="StateChart/Root/Standing/Grounded/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Standing/Grounded/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Grounded/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Standing/Grounded/Walking" to="." method="_on_walking_state_entered"]
[connection signal="state_input" from="StateChart/Root/Standing/Grounded/Walking" to="." method="_on_walking_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Standing/Grounded/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Grounded/Walking" to="." method="_on_walking_state_processing"]
[connection signal="state_input" from="StateChart/Root/Standing/Grounded/Sprinting" to="." method="_on_sprinting_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Standing/Grounded/Sprinting" to="." method="_on_sprinting_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Grounded/Sprinting" to="." method="_on_sprinting_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Airborne" to="." method="_on_airborne_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Standing/Airborne/Falling" to="." method="_on_falling_state_processing"]

[editable path="Root/legs_test"]
